--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.show_sql=false
 spring.datasource.url=jdbc:mysql://localhost:3306/dbermtv?useSSL=false
 spring.datasource.username=root
