--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,8 @@
     <modules>
         <module>core</module>
 		<module>data</module>
-	</modules>
+        <module>rest</module>
+    </modules>
     <packaging>pom</packaging>
 
 	<name>ermtv</name>
@@ -39,6 +40,12 @@
 			<dependency>
 				<groupId>io.ermdev.ermtv</groupId>
 				<artifactId>data</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>io.ermdev.ermtv</groupId>
+				<artifactId>rest</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 		</dependencies>
