Create a user endpoint with rest.

--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -11,5 +11,10 @@
 
     <artifactId>rest</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>io.ermdev.ermtv</groupId>
+            <artifactId>data</artifactId>
+        </dependency>
+    </dependencies>
 </project>
