Update the UserController.

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -14,7 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>io.ermdev.ermtv</groupId>
-            <artifactId>data</artifactId>
+            <artifactId>rest</artifactId>
         </dependency>
     </dependencies>
 
